--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,14 +39,17 @@
 
     <div class="container-fluid my-5">
         <div class="row" id="list">
-            <div class="col-4" id="Electronic">
+            <div class="col-4">
                 <h3 class="text-center bg-dark text-light">Electronic Items</h3>
+                <div id="Electronic"></div>
             </div>
-            <div class="col-4" id="Food">
+            <div class="col-4">
                 <h3 class="text-center bg-dark text-light">Food Items</h3>
+                <div id="Food"></div>
             </div>
-            <div class="col-4" id="Skincare">
+            <div class="col-4">
                 <h3 class="text-center bg-dark text-light">Skincare Items</h3>
+                <div id="Skincare"></div>
             </div>
         </div>
     </div>
